tx/config: add search_kit

--- a/.tx/config
+++ b/.tx/config
@@ -864,3 +864,7 @@ file_filter = po/qfsessionwarning/<lang>/qfsessionwarning.po
 source_file = po/qfsessionwarning/pot/qfsessionwarning.pot
 source_lang = en
 
+[civicrm_extensions.search_kit]
+file_filter = po/search_kit/<lang>/search_kit.po
+source_file = po/search_kit/pot/search_kit.pot
+source_lang = en
