tx/config: add afform and afform_admin

--- a/.tx/config
+++ b/.tx/config
@@ -868,3 +868,13 @@ source_lang = en
 file_filter = po/search_kit/<lang>/search_kit.po
 source_file = po/search_kit/pot/search_kit.pot
 source_lang = en
+
+[civicrm_extensions.afform]
+file_filter = po/afform/<lang>/afform.po
+source_file = po/afform/pot/afform.pot
+source_lang = en
+
+[civicrm_extensions.afform_admin]
+file_filter = po/afform_admin/<lang>/afform_admin.po
+source_file = po/afform_admin/pot/afform_admin.pot
+source_lang = en
